# cetris

./: .gitmodules  Puyo Puyo Tetris Arle & Carbuncle Voice Clips-kaFocY5yBmY.m4a  cetris.c  cetris.h  meson.build  meson_options.txt  ncurses_ui.c  ncurses_ui.h  notes.txt  test.c  test.h
_win/pdcurses/: pdcurses.exp  pdcurses.res
core/: \  cetris.c  cetris.h  matrix.c  matrix.h  meson.build  types.h
core/include/: cetris.h  input.h  matrix.h  test.h  types.h
core/src/: cetris.c  input.c  matrix.c  test.c  types.c
frontend/ncurses/: ncurses_ui.c
frontend/sdl/: .border.jpeg-autosave.kra  sdl_ui.c
frontends/calculator/: Makefile
frontends/calculator/CEdev/examples/: makefile
frontends/calculator/CEdev/examples/debugging/: makefile  readme.md
frontends/calculator/CEdev/examples/delay/: autotester.json  readme.md
frontends/calculator/CEdev/examples/fileio_detect/: readme.md
frontends/calculator/CEdev/examples/fileio_detectany/: autotester.json  readme.md
frontends/calculator/CEdev/examples/fileio_factorize/: autotester.badjson  readme.md
frontends/calculator/CEdev/examples/fileio_os_vars/: autotester.badjson  readme.md
frontends/calculator/CEdev/examples/fileio_read_write/: autotester.json  readme.md
frontends/calculator/CEdev/examples/fileio_rename/: autotester.json  readme.md
frontends/calculator/CEdev/examples/fileio_tokens/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_blitting/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_buffered_cube/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_char/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_clipping/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_floodfill/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_fullscreen_tiled_image/: autotester.json  makefile  readme.md
frontends/calculator/CEdev/examples/gfx_hello_world/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_light_dark/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_rletsprite/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_shapes_shift/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_sprite/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_sprite_compress/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_sprite_keys/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_sprite_rotate/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_sprite_rotate_scale/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_sprites_appvar/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_template/: readme.md
frontends/calculator/CEdev/examples/gfx_tilemap/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_tilemap_appvar/: autotester.json  readme.md
frontends/calculator/CEdev/examples/gfx_tilemap_compress/: autotester.json  readme.md
frontends/calculator/CEdev/examples/hello_world/: readme.md
frontends/calculator/CEdev/examples/keypad_arrows/: autotester.json  readme.md
frontends/calculator/CEdev/examples/keypad_multiple_keys/: autotester.json  readme.md
frontends/calculator/CEdev/examples/lcd_fade/: readme.md
frontends/calculator/CEdev/examples/lcd_fill/: readme.md
frontends/calculator/CEdev/examples/os_input/: autotester.json  readme.md
frontends/calculator/CEdev/examples/random/: autotester.json  readme.md
frontends/calculator/CEdev/examples/real_time_clock/: readme.md
frontends/calculator/CEdev/examples/second_counter/: readme.md
frontends/calculator/CEdev/examples/second_counter2/: readme.md
frontends/calculator/CEdev/examples/stopwatch/: readme.md
frontends/calculator/CEdev/examples/template/: readme.md
frontends/calculator/CEdev/include/: .linker_script  .makefile  assert.h  compression.h  ctype.h  debug.h  decompress.h  errno.h  fileioc.h  float.h  format.h  graphx.h  intce.h  iso646.h  keypadc.h  limits.h  math.h  setjmp.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  tice.h  usb.h
frontends/calculator/CEdev/include/fasmg-ez80/: ez80.inc  ld.fasmg  ti84pceg.inc
frontends/calculator/CEdev/lib/: ccleanup.src  cstartup.src  libheader.src  libload.lib
frontends/calculator/CEdev/lib/fileio/: fclose.src  feof.src  fgetc.src  fgets.src  files.src  fopen.src  fputc.src  fputs.src  fread.src  fseek.src  ftell.src  fwrite.src  remove.src
frontends/calculator/CEdev/lib/libload/: fileioc.lib  graphx.lib  keypadc.lib
frontends/calculator/CEdev/lib/shared/: abort.src  abs.src  atoi.src  atomic_load_32.src  atomic_load_decreasing_32.src  atomic_load_increasing_32.src  bdivs.src  bdivu.src  bldix.src  bmuls.src  bmulu.src  brems.src  bremu.src  bsearch.src  bshrs.src  calloc.src  delay.src  div.src  fpdata.src  fpneg.src  fpupop1.src  fpupop2.src  frameset.src  frameset0.src  free.src  (+49 more)
frontends/calculator/src/: cetris.c  cetris.h  input.c  input.h  main.c  matrix.c  matrix.h  types.h
frontends/calculator/src/gfx/: block_1.c  block_2.c  block_3.c  block_4.c  block_5.c  block_6.c  block_7.c  convpng.ini  logo_gfx.c  logo_gfx.h
frontends/curses/: curses_ui.c  meson.build
frontends/curses/win/: pdcurses.lib
frontends/gl/: 2  audio.c  audio.h  drawable.c  drawable.h  events.c  events.h  main.c  meson.build  shader.c  shader.h  skin.c  skin.h  ui.c  ui.h
frontends/gl/glad/include/glad/: gl.h  glad.h
frontends/gl/glad/src/: glad.c
frontends/gl/win/glfw/: glfw3.lib
frontends/gl/win/glfw/include/GLFW/: glfw3.h  glfw3native.h
frontends/ncurses/: meson.build
frontends/opengl/: .block-autosave.kra  main.c  meson.build
frontends/sdl/: cetris_sdl.c  cetris_sdl.h  config.ini  meson.build  sdl_ui.c
lib/: cetris.c  cetris.h  meson.build  rules.c  rules.h  test.h  timer.c  timer.h
src/: cetris.c  cetris.h  input.c  input.h  matrix.c  matrix.h  test.c  types.h
test/: a.out  line_count.sh  memory_test.c  meson.build  sdl_audio.c  word_count.sh
(+106 files in other folders)
